--- a/Class2Capacity.tex
+++ b/Class2Capacity.tex
@@ -359,7 +359,7 @@ What about optimization constraints?
  $$C= \max_{\Sg_\x}\log\det \left(\I_{N_{r}}+\frac{1}{\sigma^2}\Hb\Sg_\x\Hb^H\right)\textnormal{ s.t. \textcolor{ARust}{????????}}$$
  \begin{itemize}
   \item Total average transmitted power $\tr\{\Sg_\x\}\leq P$?
-  \item RF power amplifier in each antenna $x_i\leq P/N_{t}\forall i$?
+  \item RF power amplifier in each antenna $|x_i|^2\leq P/N_{t}\forall i$?
   \item Does the receiver know $\Hb$?
   \item Does the transmitter know $\Hb$? 
  \end{itemize}
