--- a/class0.tex
+++ b/class0.tex
@@ -119,7 +119,7 @@ Office A-204\\
 \begin{itemize}
  \item 7 Theory Sessions: Jan 30, Feb 6,13,20 Mar 6, 20, Apr 3
  \item 7 Lab Sessions: Jan 31, Feb 7,14,27 Mar 13, 27 Apr 10
- \item 1 Extra Session: April 24
+ \item 1 Catch-up Session: April 24
 \end{itemize}
 
 }
@@ -128,18 +128,17 @@ Office A-204\\
 \frame{\frametitle{Theory Class Contents}
 
 \begin{itemize}
- \item Classes 1-5: MIMO
+ \item Lessons 1-5: MIMO
  \begin{enumerate}
     \item MIMO Channel Model
-    \item Channel Capacity
-    \item Spatial Multiplexing
+    \item Channel Capacity (3h)
+    \item Spatial Multiplexing (3h)
     \item Time-Varying Channel
     \item Limited CSIT
  \end{enumerate}
- \item Classes 6-7: Advanced Waveforms
+ \item Lesson 6: Advanced Waveforms
  \begin{enumerate}\setcounter{enumi}{5}
-    \item Beyond OFDM % OTFS
-    \item 5G Numerology and HBF %HBF
+    \item Beyond OFDM and 5G Numerology %HBF
  \end{enumerate}
 \end{itemize}
 
