--- a/Class3Multiplexing.tex
+++ b/Class3Multiplexing.tex
@@ -328,7 +328,7 @@ $$\max_{\x\in\mathcal{C}^{N_t}} \mathcal{L}_{\y}(\x) \equiv \min_{\x\in\mathcal{
 %             0&0&\dots&u_{N_t,N_t}\\
 % \end{array}\right)$$
             \item Distance as recursive sum $\beta_i^{\hat{\x}_{i:N_t}}=r_{i,i}\sum_{j=i+1}^{N_t}r_{i,j}\alpha_j^{\hat{\x}_{j:N_t}}$, starting $\beta_{N_t}^{\emptyset}=0$
-$$\|\Hb(\hat{\x}-\overline{\x})\|^2=\|\R(\hat{\x}-\overline{\x})\|^2=\sum_{i=1}^{N_t}r_{i,i}^2\Big[\underset{\alpha_i^{\hat{\x}_{i:N_t}}}{\underbrace{\hat{x}_i-\overline{x}_i}}+\underset{\beta_i^{\hat{\x}_{i:N_t}}}{\underbrace{\sum_{j=i+1}^{N_t}\frac{r_{i,j}}{r_{i,i}}(\hat{x}_j-\overline{x}_j)}}\Big]$$
+$$\|\Hb(\hat{\x}-\overline{\x})\|^2=\|\R(\hat{\x}-\overline{\x})\|^2=\sum_{i=1}^{N_t}r_{i,i}^2\Big[\underset{\alpha_i^{\hat{\x}_{i:N_t}}}{\underbrace{|\hat{x}_i-\overline{x}_i}|^2}+\underset{\beta_i^{\hat{\x}_{i:N_t}}}{\underbrace{\sum_{j=i+1}^{N_t}\frac{r_{i,j}}{r_{i,i}}|\hat{x}_j-\overline{x}_j|^2}}\Big]$$
             \item If $\beta_{i+1}^{\hat{\x}_{i:N_t}}>r\Rightarrow \|\Hb(\hat{\x}-\overline{\x})\|^2>r$
         \end{itemize}
 
@@ -576,7 +576,7 @@ edge from parent/.style = {draw,-latex},
      \item Distributive properties
      \begin{equation*}
         \begin{split}
-        \Ex{}{\|\e\|^2}&=\Ex{}{(\x-\W^H\Hb\x-\W^H\z)^H(\x-\W^H\Hb\x-\W^H\z)^H)}\\
+        \Ex{}{\|\e\|^2}&=\Ex{}{(\x-\W^H\Hb\x-\W^H\z)^H(\x-\W^H\Hb\x-\W^H\z)}\\
                         &=\Ex{}{(\x^H(\I-\W^H\Hb)^H(\I-\W^H\Hb)\x}+\Ex{}{(\z^H\W\W^H\z}\\
                         &\qquad+\cancel{\Ex{}{\x^H}}(\I-\W^H\Hb)^H\cancel{\Ex{}{\z}}+\cancel{\Ex{}{\z^H}}(\I-\W^H\Hb)\cancel{\Ex{}{\x}}\\
         \end{split}
@@ -781,10 +781,12 @@ $$\Lb=\left(\begin{array}{cccc}
         \draw [->] (feedback) -| node[pos=0.99] {} node [near end] {} (sum2);
     \end{tikzpicture}
     \caption{Parallel Interference Cancelling}
-\vspace{-.5in}
     \end{figure}
+    
+\pagebreak      
 \begin{figure}
     \centering
+\vspace{-.2in}
     \begin{tikzpicture}[auto, node distance=2cm,>=latex']
         \node [pinstyle] (input)  {$\x$};
         \node [block,right of=input,node distance=1.2cm] (ch) {$\Hb$} ;
@@ -806,19 +808,36 @@ $$\Lb=\left(\begin{array}{cccc}
         \draw [->] (feedback) -| node[pos=0.99] {} node [near end] {} (sum2);
     \end{tikzpicture}
     \caption{Successive Interference Cancelling (Cholesky)}
+\vspace{-.2in}
     \end{figure}
+
+\setbeamercolor{postit}{fg=EETblue,bg=EETblue!10}
+    \begin{beamercolorbox}[wd=\textwidth]{postit}
+     \begin{algorithmic}[0]
+        \STATE $\hat{x}_1=\texttt{Q}_{\mathcal{C}}(r_1)$ //does not have interference (triangular $\Lb$)
+        \STATE Substract $L_{1,2}\hat{x}_1$ from $r_2$ 
+        \STATE Decode $\hat{x}_2=\texttt{Q}_{\mathcal{C}}(r_2-L_{1,2}\hat{x}_1)$
+        \FOR{$i\in\{3\dots  N_t\}$}
+        \STATE Substract $L_{1,i}x_1\dots L_{i-1,i}x_{i-1}$ from $r_i$
+        \STATE Decode $\hat{x}_i=\texttt{Q}_{\mathcal{C}}(r_i-L_{1,i}x_1-\dots - L_{i-1,i}x_{i-1})$
+        \ENDFOR
+     \end{algorithmic}
+     \end{beamercolorbox}
+    
+    
     \pagebreak
+    
      \begin{itemize}
      \item QR decomposition of $\Hb=\Q\R$ (Lower triangular $\R$)\\ \ \\
-     \item Choleski decomposition $\Hb^H\Hb=\Lb^H\Dl\Lb$ ($\R=\Dl^{\frac{1}{2}}\Lb$)\\ \ \\
+     \item Choleski decomposition $\Hb^H\Hb=\Lb^H\Dl\Lb$ ($\Rightarrow \R=\Dl^{\frac{1}{2}}\Lb$)\\ \ \\
      \item Triangular equivalent channel
         $$\rr=\Dl^{-\frac{1}{2}}\Q^H\y=\Dl^{-\frac{1}{2}}\R\x+\Dl^{-\frac{1}{2}}\Q\z=\Lb\x+\Dl^{-\frac{1}{2}}\z'$$
     \end{itemize}
         
 \begin{figure}
     \centering
-    \caption{Successive Interference Cancelling (QR)}
 \vspace{-.2in}
+    \caption{Successive Interference Cancelling (QR)}
     \begin{tikzpicture}[auto, node distance=2cm,>=latex']
         \node [pinstyle] (input)  {$\x$};
         \node [block,right of=input,node distance=1.2cm] (ch) {$\Hb$} ;
@@ -843,18 +862,6 @@ $$\Lb=\left(\begin{array}{cccc}
         
         \pagebreak
 
-\setbeamercolor{postit}{fg=EETblue,bg=EETblue!10}
-    \begin{beamercolorbox}[wd=\textwidth]{postit}
-     \begin{algorithmic}[0]
-        \STATE $\hat{x}_1=\texttt{Q}_{\mathcal{C}}(r_1)$ //does not have interference (triangular $\Lb$)
-        \STATE Substract $L_{1,2}\hat{x}_1$ from $r_2$ 
-        \STATE Decode $\hat{x}_2=\texttt{Q}_{\mathcal{C}}(r_2-L_{1,2}\hat{x}_1)$
-        \FOR{$i\in\{3\dots  N_t\}$}
-        \STATE Substract $L_{1,i}x_1\dots L_{i-1,i}x_{i-1}$ from $r_i$
-        \STATE Decode $\hat{x}_i=\texttt{Q}_{\mathcal{C}}(r_i-L_{1,i}x_1-\dots - L_{i-1,i}x_{i-1})$
-        \ENDFOR
-     \end{algorithmic}
-     \end{beamercolorbox}
      \begin{itemize}
       \item If all decisions are correct, 
          $$\vv=\rr-(\Lb-\I)\hat{\x}=\x+\Dl^{-\frac{1}{2}}\z'$$
@@ -1038,7 +1045,7 @@ $$\Lb=\left(\begin{array}{cccc}
          
      \pagebreak   
      \begin{definition}[Log Likelihood Ratio of BPSK $x_n$ given $y_n$]
-        $$\Lambda(x_n|y_n)=\log\frac{P(x_n=1|y)}{P(x_n=-1|y)}=\underset{\textnormal{extrinsic}}{\underbrace{\log\frac{\mathcal{L}_{y_n}(x_n=1)}{\mathcal{L}_{y_n}(x_n=-1)}}}+\underset{\textnormal{apriori}}{\underbrace{\log\frac{P(x_n=1)}{P(x_n=-1))}}}$$      \end{definition}
+        $$\Lambda(x_n|y_n)=\log\frac{P(x_n=1|y)}{P(x_n=-1|y)}=\underset{\textnormal{extrinsic }\Lambda_E}{\underbrace{\log\frac{\mathcal{L}_{y_n}(x_n=1)}{\mathcal{L}_{y_n}(x_n=-1)}}}+\underset{\textnormal{apriori }\Lambda_A}{\underbrace{\log\frac{P(x_n=1)}{P(x_n=-1))}}}$$      \end{definition}
         \begin{itemize}
           \item If symbols $x_n$ are equiprobable
             $$\frac{P(x_n=1|y_n)}{P(x_n=-1|y_n)}=\frac{P(y_n|x_n=1)}{P(y_n|x_n=-1)}$$
@@ -1112,6 +1119,30 @@ $$\Lb=\left(\begin{array}{cccc}
         \item  $\hat{f}^{(i)}(\bb|y_{_{1\dots K}})$ and $\hat{f}^{(i)}(\bb|y_{_{K+1\dots N}})$ not equip. even if $f(\bb)$ is
         
     \end{itemize}   
+    
+    \pagebreak
+   
+     
+     \item Minimal Example: parity bit $b_0,b_1,b_0\oplus b_1 = 1,0,1$
+     \begin{figure}
+        \begin{tikzpicture}[scale=.5]         
+                \node[draw,square] at (0,3) {\tiny $b_0$};
+                \node[draw,square] at (3,3) {\tiny $b_0$};
+                \node[draw,circle] at (1.5,0) {\tiny $p$};  
+                \draw (0,2.5) -- (1.5,.75);
+                \draw (3,2.5) -- (1.5,.75);
+        \end{tikzpicture}
+     \end{figure}
+     \begin{itemize}
+        \item BPSK: $x[n]=+1,-1,+1$, $y[n]=+1.2,-0.9,-0.2$
+        \item $\Lambda_{A}^{0}(b_0)=0$, $\Lambda_{A}^{0}(b_1)=0$
+        \item $\Lambda_{E}^{1}(x[0])=|2.2|^2-|0.2|^2=4.8$, $\Lambda_{E}^{1}(x[1])=-3.6$
+        \item $\Lambda_{A}^{1}(p) = \max(\pm\Lambda_{E}^{1}(x[0])\mp\Lambda_{E}^{1}(x[1])) - \max(\pm\Lambda_{E}^{1}(x[0])\pm\Lambda_{E}^{1}(x[1]))=7.2$
+        \item $\Lambda_{E}^{1}(x[2]) = |0.8|^2-|1.2|^2=-0.8$
+        \item $\Lambda^{1}(p) = \Lambda_{E}^{1}(x[2])+\Lambda_{A}^{1}(p)=6.8$
+        \item REPEAT $\Lambda_{A}^{1}(b_0)=2.4$, $\Lambda_{A}^{1}(b_1)=-6$
+    \end{itemize}
+    
           
           \pagebreak
           \item Consider the notation
